# test-LLD

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  main.cpp
OrderFlow Replay Engine/: CMakeLists.txt  app.py  engine_cli.cpp  index.html  journal.cpp  main.cpp  order_book.cpp  risk_manager.hpp  serializer.hpp  simulator.cpp  simulator.hpp  strategy.hpp
concurrency/: RideLock.cpp  RideLock.h  ThreadPool.cpp  ThreadPool.h
core/interfaces/: IDriverSelector.h  IMatchingEngine.h  IObserver.h  IPricingStrategy.h
core/models/: Driver.cpp  Driver.h  Location.cpp  Location.h  Payment.cpp  Payment.h  Ride.cpp  Ride.h  Rider.cpp  Rider.h
core/services/: DispatchSystem.cpp  DispatchSystem.h  DriverService.cpp  DriverService.h  RiderService.cpp  RiderService.h
engine/matching/: DriverSelector.cpp  DriverSelector.h  MatchingEngine.cpp  MatchingEngine.h
engine/pricing/: BasePricingStrategy.cpp  BasePricingStrategy.h  FlatRatePricingStrategy.cpp  FlatRatePricingStrategy.h  PerKmPricingStrategy.cpp  PerKmPricingStrategy.h  PricingEngine.cpp  PricingEngine.h  SurgePricingStrategy.cpp  SurgePricingStrategy.h
engine/state/: RideStateMachine.cpp  RideStateMachine.h
frontend/: index.html  simulation_metrics.js
hft_orderbook/: CMakeLists.txt  HF README.md  README.md  app.py
hft_orderbook/frontend/: index.html
hft_orderbook/include/: Benchmark.h  LockFreeQueue.h  MemoryPool.h  Order.h  Orderbook.h  Trade.h  Types.h
hft_orderbook/scripts/: build.sh
hft_orderbook/src/: Orderbook.cpp  main.cpp
hft_orderbook/tests/: test_orderbook.cpp
simulation/: MetricsCollector.cpp  MetricsCollector.h  RideSimulator.cpp  RideSimulator.h
src/: engine_cli.cpp
src/core/: order_book.cpp  order_book.hpp  simulator.cpp  simulator.hpp  types.hpp
src/journal/: journal.cpp  journal.hpp
src/network/: serializer.hpp
src/risk/: risk_manager.cpp  risk_manager.hpp
src/strategy/: strategy.hpp
